# rpgf-parsing

./: .gitignore  Cargo.toml  README.md  benchmarks.json  funding.json  gen-receipt.sh  processed_inputs  project_ids  rpgf_ballots.csv  verifying_keys  votes_table.csv  votes_table.json
browser-verify/: Cargo.toml  README.md  image_id  image_id_aggr  package.json  pnpm-lock.yaml  receipt_aggr
browser-verify/src/: lib.rs  wasm.rs
browser-verify/tests/: app.rs
compact_proof/docker/: prover.Dockerfile
compact_proof/scripts/: install_prover.sh
rpgf-ballots-methods/: Cargo.toml
rpgf-ballots-methods/guest/: Cargo.toml
src/: groth16.rs  main.rs  project.rs  projects.rs
tests/: benchmark_tests.rs
