[package]
name = "op-rpgf"
version = "0.1.0"
edition = "2021"

[dependencies]
rpgf-ballots-methods = { path = "rpgf-ballots-methods" }
json = "0.12.4"
sha3 = "0.10.8"
risc0-zkvm = "0.21.0"
serde_json = "1.0"
clap = "3.0.0"
anyhow = "1.0"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
cargo-risczero = "0.21.0"
halo2curves = { version = "0.6.0", features = ["derive_serde"] }
ethers-core = "0.6"
ethers = "0.6"
csv = "1.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
bincode = "1.3"
bytemuck = "1.7.0"
tempfile = "3.8.1"


[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
tempfile = "3.3.0"
lazy_static = "1.4.0"
mnist = "0.5"
seq-macro = "0.3.1"
test-case = "2.2.2"
tempdir = "0.3.7"
shellexpand = "3.1.0"
regex = "1.3.9"
hex = "0.4"
serial_test = "2.0"
