[package]
name = "rpgf-ballots"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ethers-core = "0.6"
json = "0.12"
serde_json = "1.0"
risc0-zkvm = { version = "0.21.0", default-features = false, features = [
  "std",
] }
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.7.0"
hex-literal = "0.4"
hex = "0.4"
sha3 = { version = "0.10", default-features = false }
k256 = { version = "=0.13.1", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
], default_features = false }
halo2curves = { version = "0.6.0", features = ["derive_serde"] }
ff = { version = "0.13", features = ["bits"] }
bincode = "1.3"
[patch.crates-io]
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }

[profile.release]
# Empirically observed to result in the best performance for this binary (in particular, better than
# "fat"). It's often a good idea to experiment with different optimization levels and options.
lto = "thin"
